Fix left/right web page shifts issue when clicking nav links

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,6 +15,12 @@
   box-sizing: border-box;
 }
 
+/* This will force a vertical scroll bar even when not needed */
+/* This is used to avoid unwanted web page shifts left or right when clicking nav links  */
+html {
+  overflow-y: scroll;
+}
+
 body {
   display: var(--display);
   flex-direction: column;
